// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root Wrapper File should apply breakpoint rules bassed on breakpointSize 1`] = `
.c0 {
  cursor: default;
}

.c0 .title {
  font-size: 12px;
}

.c0 .file-type-icon span {
  width: 14px !important;
  height: 14px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should apply breakpoint rules bassed on breakpointSize 2`] = `
.c0 {
  cursor: default;
}

.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should apply breakpoint rules bassed on breakpointSize 3`] = `
.c0 {
  cursor: default;
}

.c0 .overlay {
  padding: 24px;
}

.c0 .title {
  font-size: 14px;
}

.c0 .file-size {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 18px !important;
  height: 18px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should apply breakpoint rules bassed on breakpointSize 4`] = `
.c0 {
  border-radius: 2px;
  cursor: default;
}

.c0 .title {
  font-size: 16px;
}

.c0 .file-size {
  font-size: 14px;
}

.c0 .wrapper,
.c0 .img-wrapper {
  border-radius: 2px;
}

.c0 .overlay {
  padding: 24px;
}

.c0 .file-type-icon span {
  width: 18px !important;
  height: 18px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should render properly with default properties 1`] = `
.c0 {
  cursor: default;
}

.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should render properly with passed dimensions 1`] = `
.c0 {
  height: 300px;
  max-height: 100%;
  width: 400px;
  max-width: 100%;
  cursor: default;
}

.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should render properly with passed dimensions 2`] = `
.c0 {
  height: 300px;
  max-height: 100%;
  width: 400px;
  max-width: 100%;
  cursor: default;
}

.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should render right cursor when shouldUsePointerCursor is passed 1`] = `
.c0 {
  cursor: pointer;
}

.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should render right cursor when shouldUsePointerCursor is passed 2`] = `
.c0 {
  cursor: default;
}

.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;
